--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "@tailwindcss/postcss": "^4",
     "eslint": "^9.23.0",
     "eslint-config-next": "15.2.4",
+    "eslint-import-resolver-node": "^0.3.9",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "globals": "^16.0.0",
     "tailwindcss": "^4"
   }
